checking post integration cleaning

--- a/V1.ipynb
+++ b/V1.ipynb
@@ -2369,51 +2369,52 @@
     }
    ],
    "source": [
+    "from collections import defaultdict\n",
+    "\n",
     "print(\"=== POST-INTEGRATION CLEANING: Column Conflicts ===\")\n",
     "print(\"=\"*60)\n",
     "\n",
-    "# Identify and resolve column naming conflicts\n",
-    "conflicting_columns = [col for col in df_integrated.columns if col.endswith('_crash') or col.endswith('_person')]\n",
-    "print(f\"🔧 Resolving {len(conflicting_columns)} column conflicts...\")\n",
+    "suffix_groups = defaultdict(dict)\n",
+    "for column_name in df_integrated.columns:\n",
+    "    if column_name.endswith('_crash'):\n",
+    "        suffix_groups[column_name[:-6]][\"crash\"] = column_name\n",
+    "    elif column_name.endswith('_person'):\n",
+    "        suffix_groups[column_name[:-7]][\"person\"] = column_name\n",
     "\n",
-    "# List the conflicts for transparency\n",
-    "print(\"\\n📋 Column Conflicts Found:\")\n",
-    "conflict_pairs = {}\n",
-    "for col in conflicting_columns:\n",
-    "    base_name = col.replace('_crash', '').replace('_person', '')\n",
-    "    if base_name not in conflict_pairs:\n",
-    "        conflict_pairs[base_name] = []\n",
-    "    conflict_pairs[base_name].append(col)\n",
-    "\n",
-    "for base_name, variants in conflict_pairs.items():\n",
-    "    if len(variants) == 2:  # Only show actual conflicts\n",
-    "        print(f\"   {base_name}: {variants}\")\n",
-    "\n",
-    "# Resolution strategy: Keep crash-level versions as authoritative\n",
-    "print(f\"\\n🎯 Resolution Strategy:\")\n",
-    "print(f\"   - Keep crash-level columns as authoritative source\")\n",
-    "print(f\"   - Remove redundant person-level duplicates\")  \n",
-    "print(f\"   - Preserve person-specific columns\")\n",
-    "\n",
-    "# Remove redundant person-level columns that duplicate crash information\n",
     "columns_to_drop = []\n",
-    "for base_name, variants in conflict_pairs.items():\n",
-    "    if len(variants) == 2 and f\"{base_name}_crash\" in variants and f\"{base_name}_person\" in variants:\n",
-    "        # Keep crash version, drop person version for these specific cases\n",
-    "        if base_name in ['CONTRIBUTING_FACTOR_1']:  # These are meaningful from both perspectives\n",
-    "            # Rename for clarity instead of dropping\n",
-    "            df_integrated = df_integrated.rename(columns={\n",
-    "                f\"{base_name}_crash\": f\"{base_name}_VEHICLE\",\n",
-    "                f\"{base_name}_person\": f\"{base_name}_PERSON\"\n",
-    "            })\n",
-    "        else:\n",
-    "            columns_to_drop.append(f\"{base_name}_person\")\n",
+    "rename_map = {}\n",
+    "conflict_log = []\n",
+    "\n",
+    "for base_name, locations in suffix_groups.items():\n",
+    "    crash_col = locations.get('crash')\n",
+    "    person_col = locations.get('person')\n",
+    "    if crash_col and person_col:\n",
+    "        conflict_log.append((base_name, crash_col, person_col))\n",
+    "        rename_map[crash_col] = base_name\n",
+    "        columns_to_drop.append(person_col)\n",
+    "    elif crash_col:\n",
+    "        rename_map[crash_col] = base_name\n",
+    "    elif person_col:\n",
+    "        rename_map[person_col] = f\"{base_name}_PERSONONLY\"\n",
+    "\n",
+    "if conflict_log:\n",
+    "    print(\" Overlapping columns detected:\")\n",
+    "    for base_name, crash_col, person_col in conflict_log:\n",
+    "        print(f\"   {base_name}: keeping {crash_col}, dropping {person_col}\")\n",
+    "else:\n",
+    "    print(\" No overlapping columns detected.\")\n",
+    "\n",
+    "if rename_map:\n",
+    "    df_integrated = df_integrated.rename(columns=rename_map)\n",
     "\n",
     "if columns_to_drop:\n",
-    "    df_integrated = df_integrated.drop(columns=columns_to_drop)\n",
-    "    print(f\"   Dropped {len(columns_to_drop)} redundant columns\")\n",
+    "    unique_drop_cols = list(dict.fromkeys(columns_to_drop))\n",
+    "    df_integrated = df_integrated.drop(columns=unique_drop_cols)\n",
+    "    dropped_count = len(unique_drop_cols)\n",
+    "else:\n",
+    "    dropped_count = 0\n",
     "\n",
-    "print(\"✅ Column conflicts resolved!\")"
+    "print(f\" Canonicalized {len(rename_map)} column names and removed {dropped_count} redundant columns.\")\n"
    ]
   },
   {
@@ -2442,32 +2443,62 @@
     }
    ],
    "source": [
-    "print(\"=== POST-INTEGRATION CLEANING: Missing Values Strategy ===\")\n",
+    "print(\"=== POST-INTEGRATION CLEANING: Missing Values ===\")\n",
     "print(\"=\"*65)\n",
     "\n",
-    "# Analyze missing values introduced by the LEFT JOIN\n",
-    "print(\"🔍 Analyzing missing values from LEFT JOIN...\")\n",
-    "\n",
-    "# Create indicator for records with person data\n",
     "df_integrated['HAS_PERSON_DATA'] = df_integrated['_merge'] == 'both'\n",
-    "person_data_stats = df_integrated['HAS_PERSON_DATA'].value_counts()\n",
+    "person_counts = df_integrated['HAS_PERSON_DATA'].value_counts(dropna=False)\n",
     "\n",
-    "print(f\"\\n📊 Person Data Availability:\")\n",
-    "for has_data, count in person_data_stats.items():\n",
-    "    percentage = (count / len(df_integrated)) * 100\n",
-    "    status = \"With person data\" if has_data else \"Without person data\"\n",
-    "    print(f\"   {status}: {count:,} records ({percentage:.1f}%)\")\n",
+    "print(\" Person data availability:\")\n",
+    "for has_person, count in person_counts.items():\n",
+    "    status = \"Has person rows\" if has_person else \"Crash only\"\n",
+    "    print(f\"   {status}: {count:,} records ({(count / len(df_integrated)) * 100:.1f}%)\")\n",
     "\n",
-    "# Strategy for handling NaN values from LEFT JOIN\n",
-    "print(f\"\\n🎯 Missing Value Strategy:\")\n",
-    "print(f\"   - Keep NaN for person-specific fields when no person data exists\")\n",
-    "print(f\"   - This preserves data integrity and allows filtering\")\n",
-    "print(f\"   - Create HAS_PERSON_DATA flag for easy filtering\")\n",
+    "no_person_mask = ~df_integrated['HAS_PERSON_DATA']\n",
+    "person_identifier_cols = ['PERSON_ID', 'VEHICLE_ID', 'UNIQUE_ID']\n",
+    "person_categorical_cols = [\n",
+    "    'PERSON_TYPE', 'PERSON_INJURY', 'PERSON_SEX', 'EJECTION', 'EMOTIONAL_STATUS',\n",
+    "    'BODILY_INJURY', 'POSITION_IN_VEHICLE', 'SAFETY_EQUIPMENT', 'PED_LOCATION',\n",
+    "    'PED_ACTION', 'COMPLAINT', 'PED_ROLE', 'CONTRIBUTING_FACTOR_1', 'CONTRIBUTING_FACTOR_2'\n",
+    "]\n",
+    "person_numeric_cols = ['PERSON_AGE']\n",
     "\n",
-    "# Remove the merge indicator column as it's no longer needed\n",
-    "df_integrated = df_integrated.drop(columns=['_merge'])\n",
+    "no_person_label = 'NO_PERSON_RECORD'\n",
+    "unknown_label = 'UNKNOWN_VALUE'\n",
+    "numeric_no_person = -1\n",
     "\n",
-    "print(\"✅ Missing value strategy implemented!\")"
+    "for col in person_identifier_cols:\n",
+    "    if col in df_integrated.columns:\n",
+    "        df_integrated[col] = df_integrated[col].astype('string')\n",
+    "        df_integrated.loc[no_person_mask, col] = no_person_label\n",
+    "        df_integrated[col] = df_integrated[col].fillna(unknown_label)\n",
+    "\n",
+    "for col in person_categorical_cols:\n",
+    "    if col in df_integrated.columns:\n",
+    "        df_integrated.loc[no_person_mask, col] = no_person_label\n",
+    "        df_integrated[col] = df_integrated[col].fillna(unknown_label)\n",
+    "\n",
+    "for col in person_numeric_cols:\n",
+    "    if col in df_integrated.columns:\n",
+    "        df_integrated[col] = pd.to_numeric(df_integrated[col], errors='coerce')\n",
+    "        df_integrated.loc[no_person_mask, col] = numeric_no_person\n",
+    "        df_integrated[col] = df_integrated[col].fillna(numeric_no_person).astype('Int64')\n",
+    "\n",
+    "if '_merge' in df_integrated.columns:\n",
+    "    df_integrated = df_integrated.drop(columns=['_merge'])\n",
+    "\n",
+    "tracked_cols = [\n",
+    "    col for col in (person_identifier_cols + person_categorical_cols + person_numeric_cols)\n",
+    "    if col in df_integrated.columns\n",
+    "]\n",
+    "remaining_missing = df_integrated[tracked_cols].isna().sum()\n",
+    "remaining_missing = remaining_missing[remaining_missing > 0]\n",
+    "\n",
+    "if remaining_missing.empty:\n",
+    "    print(\" All join-induced person-level missing values resolved.\")\n",
+    "else:\n",
+    "    print(\" Remaining person column nulls (should represent genuine unknowns):\")\n",
+    "    print(remaining_missing)\n"
    ]
   },
   {
