--- a/NYC_CrashLens_Dashboard.ipynb
+++ b/NYC_CrashLens_Dashboard.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "971c10ae",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "c148b63c",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "08212674",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Amr\\AppData\\Local\\Temp\\ipykernel_6532\\3259939559.py:3: DtypeWarning: Columns (3,31,36,37,38,39,40,41,42,43) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Ramez\\AppData\\Local\\Temp\\ipykernel_18516\\3259939559.py:3: DtypeWarning: Columns (3,31,36,37,38,39,40,41,42,43) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv('cleaned_merged_data.csv')\n"
      ]
     },
@@ -91,9 +91,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset loaded: 2221559 rows, 48 columns\n",
+      "Dataset loaded: 2221796 rows, 48 columns\n",
       "Data preprocessing complete!\n",
-      "Date range: 2012-07-01 00:00:00 to 2025-11-16 00:00:00\n",
+      "Date range: 2012-07-01 00:00:00 to 2025-11-17 00:00:00\n",
       "Boroughs: ['NAN' 'BROOKLYN' 'BRONX' 'MANHATTAN' 'QUEENS' 'STATEN ISLAND']\n"
      ]
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "96e468ea",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
       "DATASET PREVIEW: cleaned_merged_data.csv\n",
       "================================================================================\n",
       "\n",
-      "Dataset Shape: 2,221,559 rows × 50 columns\n",
+      "Dataset Shape: 2,221,796 rows × 50 columns\n",
       "\n",
       "First 10 rows:\n",
       "  CRASH_DATE_x CRASH_TIME_x   BOROUGH ZIP_CODE   LATITUDE  LONGITUDE                LOCATION            ON_STREET_NAME   CROSS_STREET_NAME                         OFF_STREET_NAME  NUMBER_OF_PERSONS_INJURED  NUMBER_OF_PERSONS_KILLED  NUMBER_OF_PEDESTRIANS_INJURED  NUMBER_OF_PEDESTRIANS_KILLED  NUMBER_OF_CYCLIST_INJURED  NUMBER_OF_CYCLIST_KILLED  NUMBER_OF_MOTORIST_INJURED  NUMBER_OF_MOTORIST_KILLED  CONTRIBUTING_FACTOR_VEHICLE_1   CONTRIBUTING_FACTOR_VEHICLE_2 CONTRIBUTING_FACTOR_VEHICLE_3 CONTRIBUTING_FACTOR_VEHICLE_4 CONTRIBUTING_FACTOR_VEHICLE_5  COLLISION_ID                  VEHICLE_TYPE_CODE_1                  VEHICLE_TYPE_CODE_2 VEHICLE_TYPE_CODE_3 VEHICLE_TYPE_CODE_4 VEHICLE_TYPE_CODE_5  YEAR   UNIQUE_ID                             PERSON_ID PERSON_TYPE PERSON_INJURY  VEHICLE_ID  PERSON_AGE     EJECTION EMOTIONAL_STATUS         BODILY_INJURY POSITION_IN_VEHICLE    SAFETY_EQUIPMENT PED_LOCATION PED_ACTION                    COMPLAINT    PED_ROLE CONTRIBUTING_FACTOR_1 CONTRIBUTING_FACTOR_2 PERSON_SEX  TOTAL_INJURED  TOTAL_KILLED\n",
@@ -270,128 +270,110 @@
       "MISSING VALUES\n",
       "================================================================================\n",
       "                       Column  Missing Count  Percentage\n",
-      "          VEHICLE_TYPE_CODE_5        2211820       99.56\n",
-      "CONTRIBUTING_FACTOR_VEHICLE_5        2211504       99.55\n",
-      "          VEHICLE_TYPE_CODE_4        2186192       98.41\n",
-      "CONTRIBUTING_FACTOR_VEHICLE_4        2184860       98.35\n",
-      "                   PED_ACTION        2173512       97.84\n",
-      "                 PED_LOCATION        2173460       97.83\n",
-      "          VEHICLE_TYPE_CODE_3        2067042       93.04\n",
-      "CONTRIBUTING_FACTOR_VEHICLE_3        2060796       92.76\n",
-      "              OFF_STREET_NAME        1829917       82.37\n",
-      "             SAFETY_EQUIPMENT        1607714       72.37\n",
-      "                     EJECTION        1549203       69.73\n",
-      "          POSITION_IN_VEHICLE        1549033       69.73\n",
-      "             EMOTIONAL_STATUS        1503997       67.70\n",
-      "                BODILY_INJURY        1503960       67.70\n",
-      "                    COMPLAINT        1503956       67.70\n",
-      "            CROSS_STREET_NAME         848936       38.21\n",
-      "                   PERSON_AGE         819310       36.88\n",
-      "                     PED_ROLE         772814       34.79\n",
-      "                   VEHICLE_ID         753551       33.92\n",
-      "                     ZIP_CODE         680770       30.64\n",
-      "        CONTRIBUTING_FACTOR_1         630014       28.36\n",
-      "                    PERSON_ID         630014       28.36\n",
-      "                    UNIQUE_ID         630014       28.36\n",
-      "        CONTRIBUTING_FACTOR_2         630014       28.36\n",
-      "                   PERSON_SEX         630014       28.36\n",
-      "               ON_STREET_NAME         484016       21.79\n",
-      "          VEHICLE_TYPE_CODE_2         445856       20.07\n",
-      "CONTRIBUTING_FACTOR_VEHICLE_2         356763       16.06\n",
-      "                     LATITUDE         252207       11.35\n",
-      "                    LONGITUDE         247161       11.13\n",
-      "                     LOCATION         240368       10.82\n",
+      "          VEHICLE_TYPE_CODE_5        2212055       99.56\n",
+      "CONTRIBUTING_FACTOR_VEHICLE_5        2211739       99.55\n",
+      "          VEHICLE_TYPE_CODE_4        2186424       98.41\n",
+      "CONTRIBUTING_FACTOR_VEHICLE_4        2185092       98.35\n",
+      "                   PED_ACTION        2173674       97.83\n",
+      "                 PED_LOCATION        2173622       97.83\n",
+      "          VEHICLE_TYPE_CODE_3        2067263       93.04\n",
+      "CONTRIBUTING_FACTOR_VEHICLE_3        2061016       92.76\n",
+      "              OFF_STREET_NAME        1830075       82.37\n",
+      "             SAFETY_EQUIPMENT        1607027       72.33\n",
+      "                     EJECTION        1548400       69.69\n",
+      "          POSITION_IN_VEHICLE        1548230       69.68\n",
+      "             EMOTIONAL_STATUS        1503124       67.65\n",
+      "                BODILY_INJURY        1503087       67.65\n",
+      "                    COMPLAINT        1503083       67.65\n",
+      "            CROSS_STREET_NAME         849038       38.21\n",
+      "                   PERSON_AGE         819013       36.86\n",
+      "                     PED_ROLE         772817       34.78\n",
+      "                   VEHICLE_ID         753614       33.92\n",
+      "                     ZIP_CODE         680813       30.64\n",
+      "        CONTRIBUTING_FACTOR_1         630017       28.36\n",
+      "                    PERSON_ID         630017       28.36\n",
+      "                    UNIQUE_ID         630017       28.36\n",
+      "        CONTRIBUTING_FACTOR_2         630017       28.36\n",
+      "                   PERSON_SEX         630017       28.36\n",
+      "               ON_STREET_NAME         484095       21.79\n",
+      "          VEHICLE_TYPE_CODE_2         445928       20.07\n",
+      "CONTRIBUTING_FACTOR_VEHICLE_2         356821       16.06\n",
+      "                     LATITUDE         252216       11.35\n",
+      "                    LONGITUDE         247170       11.12\n",
+      "                     LOCATION         240370       10.82\n",
       "\n",
       "================================================================================\n",
       "BASIC STATISTICS\n",
       "================================================================================\n",
       "                        CRASH_DATE_x      LATITUDE     LONGITUDE  \\\n",
-      "count                        2221559  1.969352e+06  1.974398e+06   \n",
-      "mean   2018-01-14 20:10:36.104645376  4.072340e+01 -7.392007e+01   \n",
+      "count                        2221796  1.969580e+06  1.974626e+06   \n",
+      "mean   2018-01-15 03:30:11.358378752  4.072340e+01 -7.392007e+01   \n",
       "min              2012-07-01 00:00:00  4.050002e+01 -7.424999e+01   \n",
       "25%              2015-03-23 00:00:00  4.066771e+01 -7.397468e+01   \n",
       "50%              2017-09-03 00:00:00  4.072032e+01 -7.392716e+01   \n",
       "75%              2020-03-13 00:00:00  4.076922e+01 -7.386723e+01   \n",
-      "max              2025-11-16 00:00:00  4.090000e+01 -7.370055e+01   \n",
-      "std                              NaN  7.878089e-02  8.616470e-02   \n",
+      "max              2025-11-17 00:00:00  4.090000e+01 -7.370055e+01   \n",
+      "std                              NaN  7.878173e-02  8.616655e-02   \n",
       "\n",
       "       NUMBER_OF_PERSONS_INJURED  NUMBER_OF_PERSONS_KILLED  \\\n",
-      "count               2.221559e+06              2.221559e+06   \n",
-      "mean                3.283672e-01              1.584473e-03   \n",
+      "count               2.221796e+06              2.221796e+06   \n",
+      "mean                3.283969e-01              1.584304e-03   \n",
       "min                 0.000000e+00              0.000000e+00   \n",
       "25%                 0.000000e+00              0.000000e+00   \n",
       "50%                 0.000000e+00              0.000000e+00   \n",
       "75%                 0.000000e+00              0.000000e+00   \n",
       "max                 4.300000e+01              8.000000e+00   \n",
-      "std                 7.149929e-01              4.205138e-02   \n",
+      "std                 7.150080e-01              4.204914e-02   \n",
       "\n",
       "       NUMBER_OF_PEDESTRIANS_INJURED  NUMBER_OF_PEDESTRIANS_KILLED  \\\n",
-      "count                   2.221559e+06                  2.221559e+06   \n",
-      "mean                    5.963605e-02                  7.841340e-04   \n",
+      "count                   2.221796e+06                  2.221796e+06   \n",
+      "mean                    5.964544e-02                  7.840504e-04   \n",
       "min                     0.000000e+00                  0.000000e+00   \n",
       "25%                     0.000000e+00                  0.000000e+00   \n",
       "50%                     0.000000e+00                  0.000000e+00   \n",
       "75%                     0.000000e+00                  0.000000e+00   \n",
       "max                     2.700000e+01                  6.000000e+00   \n",
-      "std                     2.501303e-01                  2.862744e-02   \n",
+      "std                     2.501526e-01                  2.862591e-02   \n",
       "\n",
       "       NUMBER_OF_CYCLIST_INJURED  NUMBER_OF_CYCLIST_KILLED  \\\n",
-      "count               2.221559e+06              2.221559e+06   \n",
-      "mean                2.920607e-02              1.260376e-04   \n",
+      "count               2.221796e+06              2.221796e+06   \n",
+      "mean                2.920835e-02              1.260242e-04   \n",
       "min                 0.000000e+00              0.000000e+00   \n",
       "25%                 0.000000e+00              0.000000e+00   \n",
       "50%                 0.000000e+00              0.000000e+00   \n",
       "75%                 0.000000e+00              0.000000e+00   \n",
       "max                 4.000000e+00              2.000000e+00   \n",
-      "std                 1.706541e-01              1.126597e-02   \n",
+      "std                 1.706601e-01              1.126537e-02   \n",
       "\n",
       "       NUMBER_OF_MOTORIST_INJURED  NUMBER_OF_MOTORIST_KILLED  COLLISION_ID  \\\n",
-      "count                2.221559e+06               2.221559e+06  2.221559e+06   \n",
-      "mean                 2.348774e-01               6.445924e-04  3.266547e+06   \n",
+      "count                2.221796e+06               2.221796e+06  2.221796e+06   \n",
+      "mean                 2.348951e-01               6.445236e-04  3.266717e+06   \n",
       "min                  0.000000e+00               0.000000e+00  2.200000e+01   \n",
-      "25%                  0.000000e+00               0.000000e+00  3.191510e+06   \n",
-      "50%                  0.000000e+00               0.000000e+00  3.747074e+06   \n",
-      "75%                  0.000000e+00               0.000000e+00  4.302676e+06   \n",
-      "max                  4.300000e+01               5.000000e+00  4.858367e+06   \n",
-      "std                  6.761357e-01               2.776896e-02  1.509613e+06   \n",
+      "25%                  0.000000e+00               0.000000e+00  3.191570e+06   \n",
+      "50%                  0.000000e+00               0.000000e+00  3.747192e+06   \n",
+      "75%                  0.000000e+00               0.000000e+00  4.302855e+06   \n",
+      "max                  4.300000e+01               5.000000e+00  4.858610e+06   \n",
+      "std                  6.761481e-01               2.776748e-02  1.509622e+06   \n",
       "\n",
       "               YEAR     UNIQUE_ID    VEHICLE_ID    PERSON_AGE  TOTAL_INJURED  \\\n",
-      "count  2.221559e+06  1.591545e+06  1.468008e+06  1.402249e+06   2.221559e+06   \n",
-      "mean   2.017526e+03  9.104470e+06  1.853882e+07  3.659792e+01   3.283672e-01   \n",
+      "count  2.221796e+06  1.591779e+06  1.468182e+06  1.402783e+06   2.221796e+06   \n",
+      "mean   2.017526e+03  9.105129e+06  1.853911e+07  3.659696e+01   3.283969e-01   \n",
       "min    2.012000e+03  1.092200e+04  1.234230e+05  0.000000e+00   0.000000e+00   \n",
-      "25%    2.015000e+03  6.909590e+06  1.757015e+07  2.500000e+01   0.000000e+00   \n",
-      "50%    2.017000e+03  9.568628e+06  1.883983e+07  3.600000e+01   0.000000e+00   \n",
-      "75%    2.020000e+03  1.195718e+07  2.007767e+07  5.100000e+01   0.000000e+00   \n",
-      "max    2.025000e+03  1.353756e+07  2.097156e+07  1.000000e+02   4.300000e+01   \n",
-      "std    3.504587e+00  3.244670e+06  2.071199e+06  1.981441e+01   7.149929e-01   \n",
+      "25%    2.015000e+03  6.909831e+06  1.757024e+07  2.500000e+01   0.000000e+00   \n",
+      "50%    2.017000e+03  9.569091e+06  1.884001e+07  3.600000e+01   0.000000e+00   \n",
+      "75%    2.020000e+03  1.195787e+07  2.007798e+07  5.100000e+01   0.000000e+00   \n",
+      "max    2.025000e+03  1.353850e+07  2.097210e+07  1.000000e+02   4.300000e+01   \n",
+      "std    3.505250e+00  3.244879e+06  2.071251e+06  1.981426e+01   7.150080e-01   \n",
       "\n",
       "       TOTAL_KILLED  \n",
-      "count  2.221559e+06  \n",
-      "mean   1.584473e-03  \n",
+      "count  2.221796e+06  \n",
+      "mean   1.584304e-03  \n",
       "min    0.000000e+00  \n",
       "25%    0.000000e+00  \n",
       "50%    0.000000e+00  \n",
       "75%    0.000000e+00  \n",
       "max    8.000000e+00  \n",
-      "std    4.205138e-02  \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Amr\\AppData\\Local\\Temp\\ipykernel_6532\\2698838302.py:93: DeprecationWarning:\n",
-      "\n",
-      "*scatter_mapbox* is deprecated! Use *scatter_map* instead. Learn more at: https://plotly.com/python/mapbox-to-maplibre/\n",
-      "\n",
-      "C:\\Users\\Amr\\AppData\\Local\\Temp\\ipykernel_6532\\2698838302.py:93: DeprecationWarning:\n",
-      "\n",
-      "*scatter_mapbox* is deprecated! Use *scatter_map* instead. Learn more at: https://plotly.com/python/mapbox-to-maplibre/\n",
-      "\n",
-      "C:\\Users\\Amr\\AppData\\Local\\Temp\\ipykernel_6532\\2698838302.py:93: DeprecationWarning:\n",
-      "\n",
-      "*scatter_mapbox* is deprecated! Use *scatter_map* instead. Learn more at: https://plotly.com/python/mapbox-to-maplibre/\n",
-      "\n"
+      "std    4.204914e-02  \n"
      ]
     }
    ],
@@ -451,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "50f0e020",
    "metadata": {},
    "outputs": [
@@ -506,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "e0e58810",
    "metadata": {},
    "outputs": [
@@ -546,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "2b9a4b49",
    "metadata": {},
    "outputs": [
@@ -662,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "59482caa",
    "metadata": {},
    "outputs": [
@@ -933,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "a9413e86",
    "metadata": {},
    "outputs": [
@@ -992,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "b91ce0dc",
    "metadata": {},
    "outputs": [
@@ -1188,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "f74110d4",
    "metadata": {},
    "outputs": [
@@ -1221,7 +1203,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1d387a77770>"
+       "<IPython.lib.display.IFrame at 0x18056e6ee80>"
       ]
      },
      "metadata": {},
@@ -1231,7 +1213,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Amr\\AppData\\Local\\Temp\\ipykernel_6532\\2698838302.py:93: DeprecationWarning:\n",
+      "C:\\Users\\Ramez\\AppData\\Local\\Temp\\ipykernel_18516\\2698838302.py:93: DeprecationWarning:\n",
+      "\n",
+      "*scatter_mapbox* is deprecated! Use *scatter_map* instead. Learn more at: https://plotly.com/python/mapbox-to-maplibre/\n",
+      "\n",
+      "C:\\Users\\Ramez\\AppData\\Local\\Temp\\ipykernel_18516\\2698838302.py:93: DeprecationWarning:\n",
       "\n",
       "*scatter_mapbox* is deprecated! Use *scatter_map* instead. Learn more at: https://plotly.com/python/mapbox-to-maplibre/\n",
       "\n"
@@ -1344,7 +1330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
